<resources>
    <string name="app_name">BankTrack</string>
    <string name="write_to_nfc_tag">Write to NFC tag</string>
    <string name="secure_store_txt">Securely store your bank details</string>
    <string name="download_tag_txt">Download bank details</string>
    <string name="read_from_nfc_tag">Read from NFC tag</string>
    <string name="basic_details_txt">Please enter your basic details, ensure it is accurate and double-check for any errors to avoid issues</string>
    <string name="bank_name">Bank name</string>
    <string name="account_number">Account number</string>
    <string name="account_number_hint">e.g 8107562345</string>
    <string name="account_name">Account name</string>
    <string name="account_name_hint">e.g Martin Luther Quinn</string>
    <string name="scan">Scan</string>
    <string name="place_the_n">Place the NFC tag close to your device to begin scanning process</string>
    <string name="place_tag_c">Place tag close to device</string>
    <string name="scanning">Scanning..</string>
    <string name="BankTrack_uses_AES256">BankTrack uses  AES-256 encryption and is trusted by millions of user rounds the globe </string>
    <string name="done">Done</string>
    <string name="place_tag_close_to_device">Place tag close to device</string>
    <string name="place_the_NFC_tag_close_to_your_device_to_begin_scanning_process">Place the NFC tag close to your device  to begin scanning process</string>
    <string name="read_nfc_tag">Read NFC Tag</string>
    <string name="tag_detected">Tag detected</string>
    <string name="NFC_tag_detected_Reading_data">NFC tag detected. Reading data…</string>
    <string name="import_details">Import details</string>
    <string name="continue_txt">Continue</string>
    <string name="click_on_button_to_scan">Click on button to scan</string>

    <string-array name="banks">
        <item>Select an option</item>
        <item>Access Bank</item>
        <item>Citibank</item>
        <item>Diamond Bank</item>
        <item>Dynamic Standard Bank</item>
        <item>Ecobank Nigeria</item>
        <item>Fidelity Bank </item>
        <item>First Bank</item>
        <item>FCMB</item>
        <item>GT Bank</item>
        <item>Heritage Bank</item>
        <item>Jaiz Bank</item>
        <item>Keystone Bank</item>
        <item>MoniePoint</item>
        <item>OPay</item>
        <item>Providus Bank</item>
        <item>Polaris Bank</item>
        <item>Stanbic IBTC</item>
        <item>Standard Chartered</item>
        <item>Sterling Bank</item>
        <item>Suntrust Bank</item>
        <item>Union Bank</item>
        <item>UBA</item>
        <item>Unity Bank</item>
        <item>Wema Bank</item>
        <item>Zenith Bank</item>
    </string-array>
</resources>